Fix navigation wrap CSS.

--- a/assets/app.css
+++ b/assets/app.css
@@ -108,6 +108,10 @@ body {
 	bottom: 0;
 }
 
+.navigation-content-wrap {
+	overflow-y: scroll;
+}
+
 .navigation-content,
 .inspector-content {
 	position: relative;
